Fixed Footer CSS
broke footer into more <div> containers and added "width:50%;" to make the container broken into two halves so I could left align and right align my text and icons.

--- a/css/index.css
+++ b/css/index.css
@@ -58,13 +58,26 @@ h4 {
 .footerBar{
     background-color: black;
     color: #F3ECE1;
-    vertical-align:middle;
     font-family: 'arial', medium;
     font-size: 19px;
     padding-left: 25px;
     padding-top: 8px;
     padding-bottom: 8px;
-    display: inline-block;
-
+    display: flex;
+    align-items: center;
 }
 
+.left{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 50%;
+
+}
+.right{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 50%;
+    padding-right: 50px;
+}
